--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         Canvas not supported!
     </canvas>
 </div>
+<div class="theScore"></div>
 
+<script src="./js/letters.js"></script>
 <script src="./js/snake.js"></script>
 <script src="./js/scripts.js"></script>
 
