--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </div>
 <div class="theScore"></div>
 
+<script src="./js/hammer.js"></script>
 <script src="./js/letters.js"></script>
 <script src="./js/snake.js"></script>
 <script src="./js/scripts.js"></script>
