--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Snake</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <meta name="viewport" content="width=device-width, user-scalable=0">
 </head>
 <body>
 
